cmake_minimum_required(VERSION 3.10)
project(myrpc)
set(LIBRARY_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++20")
include_directories(${PROJECT_SOURCE_DIR}/src)
include_directories(${PROJECT_SOURCE_DIR}/ThirdParty/include)
link_directories(${PROJECT_SOURCE_DIR}/ThirdParty/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
#add_subdirectory(src/server)
add_subdirectory(src)
add_subdirectory(example)