cmake_minimum_required(VERSION 3.10)
project(minirpc)

aux_source_directory(. SRC_LIST)
aux_source_directory(./zk SRC_LIST_ZK)
include_directories(${PROJECT_SOURCE_DIR}/zk/)
#add_library(${PROJECT_NAME} SHARED ${SRC_LIST})
add_executable(${PROJECT_NAME} ${SRC_LIST} ${SRC_LIST_ZK})
#link_directories(${PROJECT_SOURCE_DIR}/../lib)
target_link_libraries(${PROJECT_NAME} zookeeper_mt)