cmake_minimum_required(VERSION 3.10)
project(minirpc)

aux_source_directory(. SRC_LIST)
aux_source_directory(./zk SRC_LIST_ZK)
include_directories(${PROJECT_SOURCE_DIR}/zk/)
include_directories(${PROJECT_SOURCE_DIR}/)
include_directories(${CMAKE_SOURCE_DIR}/ThirdParty/mymuduo/include)
link_directories(${CMAKE_SOURCE_DIR}/ThirdParty/mymuduo/lib)
add_library(${PROJECT_NAME} SHARED ${SRC_LIST} ${SRC_LIST_ZK})
#add_executable(${PROJECT_NAME} ${SRC_LIST} ${SRC_LIST_ZK})
#link_directories(${PROJECT_SOURCE_DIR}/../lib)
target_link_libraries(${PROJECT_NAME} zookeeper_mt newmuduo)