cmake_minimum_required(VERSION 3.10)
project(client)

aux_source_directory(. SRC_LIST)
include_directories(${CMAKE_SOURCE_DIR}/ThirdParty/minirpc/include)
link_directories(${CMAKE_SOURCE_DIR}/ThirdParty/minirpc/lib)
include_directories(${CMAKE_SOURCE_DIR}/ThirdParty/mymuduo/include)
link_directories(${CMAKE_SOURCE_DIR}/ThirdParty/mymuduo/lib)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} minirpc)